--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "tic-tac-toe",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "mongoose": "^5.11.7",
-    "nodemon": "^2.0.6"
-  }
+	"name": "tic-tac-toe",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "nodemon index.js",
+		"test": "jest --runInBand --watch ./tests"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-session": "^1.17.1",
+		"mongoose": "^5.11.7",
+		"nodemon": "^2.0.6"
+	},
+	"devDependencies": {
+		"jest": "^26.6.3",
+		"mongodb-memory-server": "^6.9.2"
+	},
+	"jest": {
+		"testEnvironment": "node"
+	}
 }
