--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "2"
 services:
-  server:
+  tic_tac:
     container_name: server
     restart: always
     build: .
     ports:
-      - "5000:5000"
+      - "5000:5001"
     links:
-      - mongo
-  mongo:
+      - mongodb
+  mongodb:
     container_name: mongo
     image: mongo
     volumes:
